[tool.poetry]
name = "associations"
version = "0.0.1"
description = "associations bot"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.1"
pytest = "^6.2.3"
black = "^20.8b1"
pylint = "^2.7.4"
pre-commit = "^2.12.1"
mypy = "^0.812"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
